# zenfinance_privacy

./: .gitignore  AGENT_GUIDE.md  INVESTOR_BRIEF.md
code/: .gitignore
code/backend/data-api/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
code/backend/price-keeper/: .env.example  package-lock.json  package.json  tsconfig.json
code/backend/prover-service/: .env.example  package-lock.json  package.json  tsconfig.json
code/contracts/: foundry.toml
code/dapp/: .npmrc  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
code/sdks/sdk-py/: pyproject.toml
code/sdks/sdk-py/examples/: deposit.py
code/sdks/sdk-py/src/zenfinance_sdk/: __init__.py  client.py  intents.py  mcp.py  sdk.py
design-v2/: README.md  architecture_overview.md  integration.md  progress.md
design-v2/pitch/: zenfinance.md
design-v2/roadmap/: agent_workflow_rules.md  architecture_context.md  code_roadmap.md  code_standard.md  connections.md  progress_tracker.md  project_overview.md  subsystem_test.md  system_check.md
design-v2/spikes/: 01_critical_path.md
design-v2/subsystems/: 01_shielded_pools.md  02_zk_circuits.md  03_smart_accounts_policies.md  04_attestation_pipeline.md  05_oracle_and_keepers.md  06_data_layer.md  07_human_frontend.md  08_agent_runtime.md  09_note_management.md  10_governance_admin.md  11_artifact_distribution.md  12_privacy_entry_layer.md  13_api_contract.md  14_interest_and_apys.md  15_threat_model.md  16_performance.md  17_device_support.md
docs/: api-contract.md  mcp-catalog.json  openapi.json
(+247 files in other folders)
