[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenfinance-sdk"
version = "0.1.0"
description = "Day-12 Python SDK for the zenfinance privacy lending protocol REST API."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator[http]>=0.26.0",
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
